# shelly-prometheus-exporter

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: docker-image.yml
shelly_prometheus_exporter/: __main__.py  app.py  devices.py  metrics.py  settings.py
