[tool.poetry]
name = "shelly-prometheus-exporter"
version = "0.1.0"
description = "Prometheus exporter for Shelly devices"
authors = ["Michal Gora <arog.lahcim@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "0.115.11"
uvicorn = "0.27.1"
httpx = "0.27.0"
pydantic-settings = "2.8.1"
pydantic = "2.10.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
